diesel_compile_tests/tests/fail/numeric_ops_require_numeric_column.stderr
error[E0369]: cannot add `columns::name` to `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:15:31
   |
LL |     let _ = users.select(name + name);
   |                          ---- ^ ---- columns::name
   |                          |
   |                          columns::name
   |
note: an implementation of `std::ops::Add` might be missing for `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:8:9
   |
 LL |         name -> VarChar,
   |         ^^^^ must implement `std::ops::Add`
note: the trait `std::ops::Add` must be implemented
  --> /home/lucac/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ops/arith.rs:77:1
   |
LL | pub const trait Add<Rhs = Self> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0369`.
